nixidy/generated/prod/mealie/HTTPRoute-mealie.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mealie
  namespace: health
spec:
  hostnames:
    - mealie.trdos.me
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: mealie
          port: 9000
